--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "firebase": "^10.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
@@ -49,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "tailwindcss": "^3.4.1"
   }
 }
